dist/1.0/bin/sample/retrieveUnpackaged/objects/SFDC_Questions__c.object
<CustomObject>
    <description>Stores script questions, with guidance</description>
    <fields>
        <fullName>Answer_Format__c</fullName>
        <description>Only includes Radio Button today, as that is what the scoring supports.  When multiple answers can be chosen a multi select option can be added.</description>
        <label>Answer Format</label>
        <picklist>
            <picklistValues>
                <fullName>Radio Button</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01530000000BYhF&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Coach__c</fullName>
        <description>Coaching advice for the person asking the question.</description>
        <label>Question Coach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Save_To_Field__c</fullName>
        <description>The name of the data field to save the answers to this question back to.</description>
        <label>Save To Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <description>This relationship serves no programatic purpose. It may be useful to note the intended script when creating the questions, especially as the number of questions increase.</description>
        <label>Script</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>R00N30000001OR5TEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Script__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>